Created div structure of index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mój osobisty budżet</title>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container">
+     <div class="topBar">
+        <div class="leftBar-logo"></div>
+        <div class="rightBar-menu"></div>
+     </div>
+     <div class="leftMain"></div>
+     <div class="rightMain-register"></div>
+     <div class="sentence"></div>
+     <div class="featuresDescription"></div>
+     <div class="footer"></div>
+  </div>
 </body>
 </html>
