--- a/index.html
+++ b/index.html
@@ -9,15 +9,24 @@
 </head>
 <body>
   <div class="container">
-     <div class="topBar">
-        <div class="leftBar-logo"></div>
-        <div class="rightBar-menu"></div>
-     </div>
-     <div class="leftMain"></div>
-     <div class="rightMain-register"></div>
+     <nav>
+         <div class="topBar">
+            <div class="leftBar-logo">
+               <div class="logoLettering">twój budżet</div>
+               <div class="logoIcon">Ikona</div>
+            </div>
+            <div class="rightBar-menu"><p>Zaloguj</p></div>
+         </div>
+     </nav>
+     <main>
+         <div class="leftMain"></div>
+         <div class="rightMain-register"></div>
+     </main>
      <div class="sentence"></div>
      <div class="featuresDescription"></div>
-     <div class="footer"></div>
+     <footer>
+         <div class="footer"></div>
+     </footer>
   </div>
 </body>
 </html>
