created full topBar

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mój osobisty budżet</title>
-   <link rel="stylesheet" href="style.css">
-</head>
+   <link rel="stylesheet" href="style.css" type="text/css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
 <body>
   <div class="container">
      <nav>
          <div class="topBar">
             <div class="leftBar-logo">
+               <div class="logoIcon">
+                  <img src="temp/budget.png" alt="budżet-ikona">
+               </div>
                <div class="logoLettering">twój budżet</div>
-               <div class="logoIcon">Ikona</div>
             </div>
-            <div class="rightBar-menu"><p>Zaloguj</p></div>
+            <div class="rightBar-menu">
+               <ul class="menu">
+                  <li class="regularMenu"><a href="#">Pomoc</a></li>
+                  <li class="regularMenu"><a href="#">Ciekawe linki</a></li>
+                  <li class="loginMenu"><a href="#">Zaloguj się</a></li>
+               </ul>
+            </div>
+            <div style="clear: both;"></div>
          </div>
      </nav>
      <main>
