--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-<body>
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
   <div class="container">
      <nav>
          <div class="topBar">
