--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
+   <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
    <div class="container">
      <nav>
@@ -36,10 +36,10 @@
          <div class="leftMain">
             <p>Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
             <ul class="main-feature-description">
-               <li><i class="demo-icon icon-ok">Zbierz wszystkie swoje przychody w jednym miejscu.</i></li>
-               <li><i class="demo-icon icon-ok">Rozsądnie kalkuluj swoje wydatki.</i></li>
-               <li><i class="demo-icon icon-ok">Analizuj swój budżet aby lepiej nim zarządzać.</i></li>
-               <li><i class="demo-icon icon-ok">Zacznij już dzisiaj korzystać z aplikacji twój budżet.</i></li>
+               <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
+               <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
+               <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
+               <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji twój budżet.</span></i></li>
             </ul>
          </div>
          <div class="rightMain"></div>
