--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
                <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji twój budżet.</span></i></li>
             </ul>
          </div>
-         <div class="rightMain"></div>
+         <div class="rightMain">
+            <input type="text" name="textInput" id="textInput1" placeholder="Podaj swoje imię"></br>
+            <input type="email" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email"></br>
+            <input type="password" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło"></br>
+            <input type="submit" value="Zarejestru się">
+         </div>
          <div style="clear: both;"></div>
      </main>
      <div class="sentence"></div>
