--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
                <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji twój budżet.</span></i></li>
             </ul>
+            <img id="mainChart" src="temp/mainChart.png" alt="wykresy">
          </div>
          <div class="rightMain">
             <input type="text" name="textInput" id="textInput1" placeholder="Podaj swoje imię"></br>
