--- a/index.html
+++ b/index.html
@@ -32,17 +32,18 @@
             <div style="clear: both;"></div>
          </div>
      </nav>
-     <main>
+     
          <div class="leftMain">
             <p>Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
             <ul class="main-feature-description">
                <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
                <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
                <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
-               <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji twój budżet.</span></i></li>
+               <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
             </ul>
             <img id="mainChart" src="temp/mainChart.png" alt="wykresy">
          </div>
+      <main>
          <div class="rightMain">
             <input type="text" name="textInput" id="textInput1" placeholder="Podaj swoje imię"></br>
             <input type="email" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email"></br>
@@ -51,10 +52,14 @@
          </div>
          <div style="clear: both;"></div>
      </main>
-     <div class="sentence"></div>
+     <div class="sentence">
+        <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
+     </div>
      <div class="featuresDescription"></div>
      <footer>
-         <div class="footer"></div>
+         <div class="footer">
+           <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
+         </div>
      </footer>
   </div>
 </body>
