Added registration/login label under password input

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                <input type="text" name="textInput" id="textInput1" placeholder="Podaj swoje imię"></br>
                <input type="email" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email"></br>
                <input type="password" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło"></br>
+               <h4 class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </h4>
                <input type="submit" value="Zarejestru się">
             </form>
          </div>
