--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+</head>
+<body>
    <div class="container">
      <nav>
          <div class="topBar">
@@ -24,8 +26,8 @@
             </div>
             <div class="rightBar-menu">
                <ul class="menu">
-                  <li class="regularMenu"><a href="#">Pomoc</a></li>
-                  <li class="regularMenu"><a href="#">Ciekawe linki</a></li>
+                  <li><a href="#" class="regularMenu">Pomoc</a></li>
+                  <li><a href="#" class="regularMenu">Ciekawe linki</a></li>
                   <li class="loginMenu"><a href="login.html">Zaloguj się</a></li>
                </ul>
             </div>
@@ -34,7 +36,7 @@
      </nav>
      
          <div class="leftMain">
-            <p>Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
+            <p class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
             <ul class="main-feature-description">
                <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
                <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
