--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
                <input type="text" name="textInput" id="textInput1" placeholder="Podaj imię"></br>
                <input type="password" name="passwordInput" id="passwordInput1" placeholder="Podaj hasło"></br>
                <h4 class="isAccount">Nie masz jeszcze konta? <a href="index.html" class="isAccountLink">Zarejestruj się</a> </h4>
-               <input type="submit" value="Zaloguj się">
+               <input type="submit" value="Zaloguj się" class="submitButton">
             </form>
          </div>
          <div style="clear: both;"></div>
