--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
          <p class="mainParagraph">Witaj <span class="loggedName">Daniel</span></p>
            <a href=# id="addIncome">DODAJ PRZYCHÓD</a>
            <a href="addExpense.html" id="addExpense">DODAJ ROZCHÓD</a>
-           <a href="showBalance.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
+           <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
          </div>
       <main>
          <div class="rightMainInMenu">
