--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
          </div>
      </nav>
          <div class="leftMainInMenu">
-         <p class="mainParagraph">Witaj <span class="loggedName">Daniel</span></p>
+         <p class="mainParagraph">Witaj <span class="loggedName"></span></p>
            <a href=# id="addIncome">DODAJ PRZYCHÓD</a>
            <a href="addExpense.html" id="addExpense">DODAJ ROZCHÓD</a>
            <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
