--- a/addExpense.html
+++ b/addExpense.html
@@ -14,8 +14,12 @@
    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+   <script src="script.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
 </head>
-<body>
+<body onload="loadCurrentDate()">
    <div class="container">
      <nav>
          <div class="topBar">
@@ -51,27 +55,23 @@
          </div>
       <main>
          <div class="rightMainInExpense">
-            <p class="mainParagraph">Dodaj wydatek</p>
-
+            <p class="mainParagraph">Dodaj wydatek</p>                             
+  
             <form action="#">
-               <input type="number" step="0.01" name="expenseAmount" id="expenseAmount1" placeholder="Podaj kwotę wydatku"></br>
-               <input class="date" type="date" name="expenseDate" id="expenseDate1"></br>
-               <script>
-                  var dateControl = document.querySelector('input[type="date"]');
-                  dateControl.value = '2017-06-01';
-               </script>
+               <input class="date" type="number" data-decimal="2" value="" name="expenseAmount"  id="expenseAmount1"  placeholder="Podaj kwotę wydatku" oninput="enforceNumberValidation(this)"></br>
+               <input class="date" type="date" name="expenseDate" id="expenseDate1" oninput="checkItem()"></br>
                <div class="select">
                   <div class="paymentIcon">
-                     <select name="payment" id="payment">
-                        <option selected disabled> Sposób płatności </option>
-                        <option value="cash">Gotówka</option>
+                     <select name="payment" id="payment" oninput="checkItem()">
+                        <option value="" selected disabled> Sposób płatności </option>
+                        <option value="payCash">Gotówka</option>
                         <option value="creditCard">Karta kredytowa</option>
                         <option value="debitCard">Karta debetowa</option>
                      </select>
                   </div>
                   <div class="categoryIcon">
-                     <select name="expenseCategory" id="expenseCategory">
-                        <option selected disabled> Kategoria wydatku</option>
+                     <select name="expenseCategory" id="expenseCategory" oninput="checkItem()">
+                        <option value="" selected disabled> Kategoria wydatku</option>
                         <option value="food">Jedzenie</option>
                         <option value="apartment">Mieszkanie</option>
                         <option value="transportation">Transport</option>
@@ -92,10 +92,11 @@
                      </select>
                   </div>
                </div>
-               <input type="submit" value="Dodaj wydatek" class="submitButton">
-               <a href="#" id="clearButton">Wyczyść</a>
+             
+               <input type="submit" value="Dodaj wydatek" class="submitButton" onclick="addExpense();return false;">
+               <a href="#" id="clearButton" onclick="clearInputs()">Wyczyść</a>
             </form>
-            <p class="confirmParagraph">Dodano wydatek &#10004</p>
+            <p id="addExpenseParagraph">Dodano wydatek</p>
 
          </div>
          <div style="clear: both;"></div>
