--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
+   <script src="script.js"></script>
 </head>
 <body>
    <div class="container">
@@ -34,34 +35,38 @@
             <div style="clear: both;"></div>
          </div>
      </nav>
-     
-         <div class="leftMain">
-            <p class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
-            <ul class="main-feature-description">
-               <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
-               <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
-               <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
-               <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
-            </ul>
-            <img id="mainChart" src="temp/mainChart.png" alt="wykresy">
-         </div>
-      <main>
-         <div class="rightMain">
-            <form action="login.html">
-               <input type="text" name="textInput" id="textInput1" placeholder="Podaj swoje imię"></br>
-               <input type="email" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email"></br>
-               <input type="password" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło"></br>
-               <h4 class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </h4>
-               <input type="submit" value="Zarejestru się" class="submitButton">
-            </form>
-         </div>
-         <div style="clear: both;"></div>
+     <main>
+         <section>
+            <div class="leftMain">
+               <p class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
+               <ul class="main-feature-description">
+                  <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
+                  <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
+                  <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
+                  <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
+               </ul>
+               <img id="mainChart" src="temp/mainChart.png" alt="wykresy">
+            </div>
+         </section>
+         <section>
+            <div class="rightMain">
+               <form action="login.html" class="theForm">
+                  <input type="text" minlength="5" value="" name="textInput" id="textInput1" placeholder="Podaj swoje imię" oninput="checkItem()" required></br>
+                  <input type="email" minlength="5" value="" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email" oninput="validateEmail(document.getElementById('emailInput1'))" required></br>
+                  <input type="password" minlength="5" value="" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło" oninput="checkItem()" required></br>
+                  <h4 class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </h4>
+                  <input type="submit" value="Zarejestru się" class="submitButton" onclick="validateForm();">
+               </form>
+            </div>
+            <div style="clear: both;"></div>
+         </section>
      </main>
+     <footer>
      <div class="sentence">
         <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
      </div>
      <div class="featuresDescription"></div>
-     <footer>
+     
          <div class="footer">
            <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
          </div>
