--- a/menu.html
+++ b/menu.html
@@ -43,23 +43,27 @@
             <div style="clear: both;"></div>
          </div>
      </nav>
-         <div class="leftMainInMenu">
-         <p class="mainParagraph">Witaj <span class="loggedName"></span></p>
-           <a href=# id="addIncome">DODAJ PRZYCHÓD</a>
-           <a href="addExpense.html" id="addExpense">DODAJ ROZCHÓD</a>
-           <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
-         </div>
-      <main>
-         <div class="rightMainInMenu">
-            <img id="mainChartInMenu" src="temp/mainChart.png" alt="wykresy">
-         </div>
-         <div style="clear: both;"></div>
+     <main>
+        <section>
+            <div class="leftMainInMenu">
+            <h1 class="mainParagraph">Witaj <span class="loggedName">Daniel</span></h1>
+            <a href=# id="addIncome">DODAJ PRZYCHÓD</a>
+            <a href="addExpense.html" id="addExpense">DODAJ ROZCHÓD</a>
+            <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
+            </div>
+        </section>
+        <section>
+            <div class="rightMainInMenu">
+               <img id="mainChartInMenu" src="temp/mainChart.png" alt="wykresy">
+            </div>
+            <div style="clear: both;"></div>
+        </section>
      </main>
+     <footer>
      <div class="sentence">
-        <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
+        <h2 class="mainParagraph">Profesjonalnie buduj swój kapitał osobisty!</h2>
      </div>
      <div class="featuresDescription"></div>
-     <footer>
          <div class="footer">
            <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
          </div>
