--- a/addExpense.html
+++ b/addExpense.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Menu główne">
-   <title>Twój budżet - Menu główne</title>
+   <title>Twój budżet - Dodaj wydatek</title>
    <link rel="stylesheet" href="style.css" type="text/css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,8 +16,6 @@
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
    <script src="script.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-
 </head>
 <body onload="loadCurrentDate()">
    <div class="container">
@@ -47,65 +45,68 @@
             <div style="clear: both;"></div>
          </div>
      </nav>
-         <div class="leftMainInMenu">
-         <p class="mainParagraph">Witaj <span class="loggedName">Daniel</span></p>
-           <a href="#" id="addIncome">DODAJ PRZYCHÓD</a>
-           <a href="addExpense.html" id="addExpense">DODAJ WYDATEK</a>
-           <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
-         </div>
-      <main>
-         <div class="rightMainInExpense">
-            <p class="mainParagraph">Dodaj wydatek</p>                             
-  
-            <form action="#">
-               <input class="date" type="number" data-decimal="2" value="" name="expenseAmount"  id="expenseAmount1"  placeholder="Podaj kwotę wydatku" oninput="enforceNumberValidation(this)"></br>
-               <input class="date" type="date" name="expenseDate" id="expenseDate1" oninput="checkItem()"></br>
-               <div class="select">
-                  <div class="paymentIcon">
-                     <select name="payment" id="payment" oninput="checkItem()">
-                        <option value="" selected disabled> Sposób płatności </option>
-                        <option value="payCash">Gotówka</option>
-                        <option value="creditCard">Karta kredytowa</option>
-                        <option value="debitCard">Karta debetowa</option>
-                     </select>
-                  </div>
-                  <div class="categoryIcon">
-                     <select name="expenseCategory" id="expenseCategory" oninput="checkItem()">
-                        <option value="" selected disabled> Kategoria wydatku</option>
-                        <option value="food">Jedzenie</option>
-                        <option value="apartment">Mieszkanie</option>
-                        <option value="transportation">Transport</option>
-                        <option value="telecommunication">Telekomunikacja</option>
-                        <option value="healthcare">Opieka zdrowotna</option>
-                        <option value="cloth">Ubranie</option>
-                        <option value="hygiene">Higiena</option>
-                        <option value="kids">Dzieci</option>
-                        <option value="entertainment">Rozrywka</option>
-                        <option value="trip">Wycieczka</option>
-                        <option value="training">Szkolenia</option>
-                        <option value="books">Książki</option>
-                        <option value="savings">Oszczędności</option>
-                        <option value="pension">Na złotą jesień, czyli emeryturę</option>
-                        <option value="debt">Spłata długów</option>
-                        <option value="donation">Darowizna</option>
-                        <option value="another">Inne</option>
-                     </select>
-                  </div>
+     <main>
+        <section>
+               <div class="leftMainInMenu">
+               <h2 class="mainParagraph">Witaj <span class="loggedName">Daniel</span></h2>
+               <a href="#" id="addIncome">DODAJ PRZYCHÓD</a>
+               <a href="addExpense.html" id="addExpense">DODAJ ROZCHÓD</a>
+               <a href="balancePeriod.html" id="showBalance">PRZEGLĄDAJ BILANS</a>
                </div>
-             
-               <input type="submit" value="Dodaj wydatek" class="submitButton" onclick="addExpense();return false;">
-               <a href="#" id="clearButton" onclick="clearInputs()">Wyczyść</a>
-            </form>
-            <p id="addExpenseParagraph">Dodano wydatek</p>
-
-         </div>
-         <div style="clear: both;"></div>
+         </section>
+         <section>
+            <div class="rightMainInExpense">
+               <header>
+                  <h2 class="mainParagraph">Dodaj wydatek</h2> 
+               </header>                            
+               <form action="#">
+                  <input class="date" type="number" data-decimal="2" value="" name="expenseAmount"  id="expenseAmount1"  placeholder="Podaj kwotę wydatku" oninput="enforceNumberValidation(this)">
+                  <input class="date" type="date" name="expenseDate" id="expenseDate1" oninput="checkItem()">
+                  <div class="select">
+                     <div class="paymentIcon">
+                        <select name="payment" id="payment" oninput="checkItem()">
+                           <option value="" selected disabled> Sposób płatności </option>
+                           <option value="payCash">Gotówka</option>
+                           <option value="creditCard">Karta kredytowa</option>
+                           <option value="debitCard">Karta debetowa</option>
+                        </select>
+                     </div>
+                     <div class="categoryIcon">
+                        <select name="expenseCategory" id="expenseCategory" oninput="checkItem()">
+                           <option value="" selected disabled> Kategoria wydatku</option>
+                           <option value="food">Jedzenie</option>
+                           <option value="apartment">Mieszkanie</option>
+                           <option value="transportation">Transport</option>
+                           <option value="telecommunication">Telekomunikacja</option>
+                           <option value="healthcare">Opieka zdrowotna</option>
+                           <option value="cloth">Ubranie</option>
+                           <option value="hygiene">Higiena</option>
+                           <option value="kids">Dzieci</option>
+                           <option value="entertainment">Rozrywka</option>
+                           <option value="trip">Wycieczka</option>
+                           <option value="training">Szkolenia</option>
+                           <option value="books">Książki</option>
+                           <option value="savings">Oszczędności</option>
+                           <option value="pension">Na złotą jesień, czyli emeryturę</option>
+                           <option value="debt">Spłata długów</option>
+                           <option value="donation">Darowizna</option>
+                           <option value="another">Inne</option>
+                        </select>
+                     </div>
+                  </div>               
+                  <input type="submit" value="Dodaj wydatek" class="submitButton" onclick="addExpense();return false;">
+                  <a href="#" id="clearButton" onclick="clearInputs()">Wyczyść</a>
+               </form>
+               <p id="addExpenseParagraph">Dodano wydatek</p>
+            </div>
+            <div style="clear: both;"></div>
+        </section>
      </main>
-     <div class="sentence">
-        <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
-     </div>
-     <div class="featuresDescription"></div>
      <footer>
+     <div class="sentence">
+        <h2 class="mainParagraph">Profesjonalnie buduj swój kapitał osobisty!</h2>
+     </div>
+     <div class="featuresDescription"></div> 
          <div class="footer">
            <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
          </div>
