--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
      <main>
          <section>
             <div class="leftMain">
-               <p class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</p>
+               <header>
+                  <h1 class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</h1>
+               </header>
                <ul class="main-feature-description">
                   <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
                   <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
@@ -51,10 +53,10 @@
          <section>
             <div class="rightMain">
                <form action="login.html" class="theForm">
-                  <input type="text" minlength="5" value="" name="textInput" id="textInput1" placeholder="Podaj swoje imię" oninput="checkItem()" required></br>
-                  <input type="email" minlength="5" value="" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email" oninput="validateEmail(document.getElementById('emailInput1'))" required></br>
-                  <input type="password" minlength="5" value="" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło" oninput="checkItem()" required></br>
-                  <h4 class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </h4>
+                  <input type="text" minlength="5" value="" name="textInput" id="textInput1" placeholder="Podaj swoje imię" oninput="checkItem()" required>
+                  <input type="email" minlength="5" value="" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email" oninput="validateEmail(document.getElementById('emailInput1'))" required>
+                  <input type="password" minlength="5" value="" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło" oninput="checkItem()" required>
+                  <p class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </p>
                   <input type="submit" value="Zarejestru się" class="submitButton" onclick="validateForm();">
                </form>
             </div>
@@ -63,10 +65,9 @@
      </main>
      <footer>
      <div class="sentence">
-        <h1>Profesjonalnie buduj swój kapitał osobisty!</h1>
+        <h2 class="mainParagraph">Profesjonalnie buduj swój kapitał osobisty!</h2>
      </div>
-     <div class="featuresDescription"></div>
-     
+     <div class="featuresDescription"></div>   
          <div class="footer">
            <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
          </div>
