rearanged files in directory structure

--- a/balancePeriod.html
+++ b/balancePeriod.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Przeglądaj bilans">
    <title>Twój budżet - Bilans</title>
-   <link rel="stylesheet" href="style.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,9 +14,9 @@
    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
-   <script src="script.js"></script>
+   <script src="scripts/script.js"></script>
    <script src="https://www.gstatic.com/charts/loader.js"></script>
-   <script src="charts.js"></script>
+   <script src="scripts/charts.js"></script>
 </head>
 <body onload="limitDateInput()">
    <div class="container">
@@ -25,7 +25,7 @@
             <a href="index.html" class="logoIndex">
                <div class="leftBar-logo">
                   <div class="logoIcon">
-                     <img src="temp/budget.png" alt="budżet-ikona">
+                     <img src="img/budget.png" alt="budżet-ikona">
                   </div>
                   <div class="logoLettering">twój <span style="color: #8db856;">budżet</span> </div>
                </div>
