--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Menu główne">
    <title>Twój budżet - Menu główne</title>
-   <link rel="stylesheet" href="style.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
             <a href="index.html" class="logoIndex">
                <div class="leftBar-logo">
                   <div class="logoIcon">
-                     <img src="temp/budget.png" alt="budżet-ikona">
+                     <img src="img/budget.png" alt="budżet-ikona">
                   </div>
                   <div class="logoLettering">twój <span style="color: #8db856;">budżet</span> </div>
                </div>
@@ -54,7 +54,7 @@
         </section>
         <section>
             <div class="rightMainInMenu">
-               <img id="mainChartInMenu" src="temp/mainChart.png" alt="wykresy">
+               <img id="mainChartInMenu" src="img/mainChart.png" alt="wykresy">
             </div>
             <div style="clear: both;"></div>
         </section>
