--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Twój budżet - Zaloguj się</title>
-   <link rel="stylesheet" href="style.css" type="text/css">
+   <link rel="stylesheet" href="css/style.css" type="text/css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,7 +13,7 @@
    <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
    <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
-   <script src="script.js"></script>
+   <script src="scripts/script.js"></script>
 </head>
 <body>
    <div class="container">
@@ -22,7 +22,7 @@
             <a href="index.html" class="logoIndex">
                <div class="leftBar-logo">
                   <div class="logoIcon">
-                     <img src="temp/budget.png" alt="budżet-ikona">
+                     <img src="img/budget.png" alt="budżet-ikona">
                   </div>
                   <div class="logoLettering">twój <span style="color: #8db856;">budżet</span> </div>
                </div>
@@ -49,7 +49,7 @@
                   <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
                   <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
                </ul>
-               <img id="mainChart" src="temp/mainChart.png" alt="wykresy">
+               <img id="mainChart" src="img/mainChart.png" alt="wykresy">
             </div>
          </section>
          <section>
