--- a/addExpense.html
+++ b/addExpense.html
@@ -35,7 +35,7 @@
                   <li><a href="links.html" class="regularMenu">Ciekawe linki</a></li>
                   <li><a href="index.html" class="regularMenu">Wyloguj się</a></li>
                   <li id="alignSettingsIcon">
-                     <a href="settings.html" class="settings">
+                     <a href="#" class="settings">
                         <span class="tooltiptext">Zmień swoje ustawienia</span>
                         <span class="rotate"><i class="icon-cog"></i></span>
                      </a>
