--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
    <script src="scripts/script.js"></script>
 </head>
 <body>
-   <div class="container">
      <nav>
-         <div class="topBar">
+         <div class="topBar" id="topBar1">
             <div class="leftBar-logo">
                <div class="logoIcon">
                   <img src="img/budget.png" alt="budżet-ikona">
@@ -36,6 +35,7 @@
          </div>
      </nav>
      <main>
+        <div class="content">
          <section>
             <div class="leftMain">
                <header>
@@ -62,6 +62,7 @@
             </div>
             <div style="clear: both;"></div>
          </section>
+      </div>
      </main>
      <footer>
      <div class="sentence">
@@ -72,6 +73,6 @@
            <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
          </div>
      </footer>
-  </div>
+  
 </body>
 </html>
