--- a/index.html
+++ b/index.html
@@ -5,74 +5,16 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mój osobisty budżet</title>
-   <link rel="stylesheet" href="css/style.css" type="text/css">
-   <link rel="stylesheet" href="css/fontello.css" type="text/css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@700&family=Martel:wght@900&family=Montserrat:wght@600&family=Righteous&display=swap" rel="stylesheet">  
-   <link href="http://fonts.cdnfonts.com/css/sofia-pro" rel="stylesheet">
-   <script src="scripts/script.js"></script>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-     <nav>
-         <div class="topBar" id="topBar1">
-            <div class="leftBar-logo">
-               <div class="logoIcon">
-                  <img src="img/budget.png" alt="budżet-ikona">
-               </div>
-               <div class="logoLettering">twój <span style="color: #8db856;">budżet</span> </div>
-            </div>
-            <div class="rightBar-menu">
-               <ul class="menu">
-                  <li><a href="#" class="regularMenu">Pomoc</a></li>
-                  <li><a href="#" class="regularMenu">Ciekawe linki</a></li>
-                  <li class="loginMenu"><a href="login.html">Zaloguj się</a></li>
-               </ul>
-            </div>
-            <div style="clear: both;"></div>
-         </div>
-     </nav>
-     <main>
-        <div class="content">
-         <section>
-            <div class="leftMain">
-               <header>
-                  <h1 class="mainParagraph">Zarejestruj się już teraz aby zarządzać swoim budżetem.</h1>
-               </header>
-               <ul class="main-feature-description">
-                  <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
-                  <li><i class="demo-icon icon-ok"><span>Rozsądnie kalkuluj swoje wydatki.</span></i></li>
-                  <li><i class="demo-icon icon-ok"><span>Analizuj swój budżet aby lepiej nim zarządzać.</span></i></li>
-                  <li><i class="demo-icon icon-ok"><span>Zacznij już dzisiaj korzystać z aplikacji Twój budżet.</span></i></li>
-               </ul>
-               <img id="mainChart" src="img/mainChart.png" alt="wykresy">
-            </div>
-         </section>
-         <section>
-            <div class="rightMain">
-               <form action="login.html" class="theForm">
-                  <input type="text" minlength="5" value="" name="textInput" id="textInput1" placeholder="Podaj swoje imię" oninput="checkItem()" required>
-                  <input type="email" minlength="5" value="" name="emailInput" id="emailInput1" placeholder="Podaj swój adres email" oninput="validateEmail(document.getElementById('emailInput1'))" required>
-                  <input type="password" minlength="5" value="" name="passwordInput" id="passwordInput1" placeholder="Utwórz swoje hasło" oninput="checkItem()" required>
-                  <p class="isAccount">Masz już założone konto? <a href="login.html" class="isAccountLink">Zaloguj się</a> </p>
-                  <input type="submit" value="Zarejestru się" class="submitButton" onclick="validateForm();">
-               </form>
-            </div>
-            <div style="clear: both;"></div>
-         </section>
-      </div>
-     </main>
-     <footer>
-     <div class="sentence">
-        <h2 class="mainParagraph">Profesjonalnie buduj swój kapitał osobisty!</h2>
-     </div>
-     <div class="featuresDescription"></div>   
-         <div class="footer">
-           <p>© 2021 Twój budżet osobisty. All rights reserved.</p> 
-         </div>
-     </footer>
-  
+   <div class="container-xxl mt-3">
+      <h2 class="display-2">Twój budżet</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti nostrum dolor in est alias, recusandae maxime voluptatum error molestias animi quos explicabo omnis nobis temporibus vel qui quisquam hic maiores, debitis voluptate obcaecati. Voluptas delectus sequi est porro reprehenderit obcaecati totam at nostrum, molestiae distinctio possimus unde nobis, inventore ex.</p>
+   
+   </div>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
