Added bootstrap login page

--- a/login.html
+++ b/login.html
@@ -36,10 +36,10 @@
                   <a href="#" class="nav-link text-primary mt-2 me-3">Pomoc</a>
                </li>
                <li class="nav-item d-md-none">
-                  <a href="#" class="nav-link active">Zaloguj się</a>
+                  <a href="#" class="nav-link active">Zarejestruj się</a>
                </li>
                <li class="nav-item ms-2 d-none d-md-inline">
-                  <a href="#" class="btn btn-outline-light fw-normal bg-light text-primary pt-3 pb-3 ps-4 pe-4" aria-current="page">Zaloguj się</a>
+                  <a href="#" class="btn btn-outline-light fw-normal bg-light text-primary pt-3 pb-3 ps-4 pe-4" aria-current="page">Zarejestruj się</a>
                </li>
             </ul>
          </div>
@@ -51,7 +51,7 @@
          <div class="row justify-content-between">
             <div class="col-md-6 col-lg-7 text-center">
                <header>
-                  <h1 class="text-md-start text-center">Zarejestruj się już teraz aby zarządzać swoim budżetem.</h1>
+                  <h1 class="text-md-start text-center">Zaloguj się aby zarządzać swoim budżetem.</h1>
                </header>
                <ul class="text-start">
                   <li><i class="demo-icon icon-ok"><span>Zbierz wszystkie swoje przychody w jednym miejscu.</span></i></li>
@@ -63,7 +63,7 @@
             </div>
           <!-- fomrm & inputs -->
             <div class="col-md-6 col-lg pe-3">
-               <form action="login.html" class="needs-validation" novalidate>
+               <form action="menu.html" class="needs-validation" novalidate>
                   <div class="mb-3 mt-5">
                      <label for="inputName1" class="form-label fs-5">Podaj swoje imię</label>
                      <input type="text" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputName1" minlength="4" required>
@@ -72,21 +72,13 @@
                      </div>
                   </div>
                   <div class="mb-3">
-                    <label for="inputEmail1" class="form-label fs-5">Podaj swój adres email</label>
-                    <input type="email" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputEmail1" aria-describedby="emailHelp" required>
-                    <div class="invalid-feedback">
-                     Wprowadź poprawny adres e-mail
-                  </div>
-                    <div id="emailHelp" class="form-text">Nigdy nie udostepnimy nikomu twojego adresu</div>
-                  </div>
-                  <div class="mb-3">
-                    <label for="inputPassword1" class="form-label fs-5">Utwórz swoje hasło</label>
+                    <label for="inputPassword1" class="form-label fs-5">Wprowadź swoje hasło</label>
                     <input type="password" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputPassword1" minlength="5" required>
                     <div class="invalid-feedback">
                      Wprowadź poprawne hasło (min. 5 znaków)
                   </div> 
                   </div>
-                  <button type="submit" class="btn btn-light p-3">Zarejestruj się</button>
+                  <button type="submit" class="btn btn-light p-3">Zaloguj się</button>
                 </form>
                 <script src="js/script.js"></script>
             </div>
