Added menu, addExpense, addIncome, balancePeriod pages on bootstrap

--- a/startingVersionNoBootstrap/balancePeriod.html
+++ b/startingVersionNoBootstrap/balancePeriod.html
@@ -57,10 +57,10 @@
         <section>
          <div class="rightMainInExpense">
             <h2 class="mainParagraph">Przeglądaj bilans</h2>
-            <form action="#" class="theForm">
+            <form action="#" >
                <div class="select">
                   <div class="paymentIcon">
-                     <select name="payment" id="payment" onchange="showDateInputs()">
+                     <select name="payment" id="payment" onchange="showDateInputs();">
                         <option selected value="bieżący miesiąc">Bieżący miesiąc</option>
                         <option value="poprzedni miesiąc">Poprzedni miesiąc</option>
                         <option value="bieżący rok">Bieżący rok</option>
