--- a/addExpense.html
+++ b/addExpense.html
@@ -9,8 +9,7 @@
    <link rel="stylesheet" href="css/custom.css">
    <link rel="stylesheet" href="css/fontello.css" type="text/css">
 </head>
-<body>
-
+<body onload="showTodayExpenseDate()">
 <div class="mainContainer mb-5">
    <!-- navbar -->
    <nav class="navbar navbar-expand-md navbar-light">
@@ -72,8 +71,54 @@
                   </a>
                </div>   
             </div>
-            <div class="col-md-6 col-lg pe-3">
-               <img class="img-fluid d-none d-lg-block p-5" src="img/mainChart.png" alt="main chart">
+            <div class="col ms-lg-5 mt-5 mt-lg-0">
+               <header>
+                  <h1 class="text-start">Dodaj rozchód</h1>
+               </header>
+
+               <form action="#" class="needs-validation" id="addExpenseForm" novalidate>
+                  <div class="mb-3 mt-5">
+                     <label for="inputExpense1" class="form-label">Podaj kwotę wydatku</label>
+                     <input type="number" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputExpense1" step="any" required>
+                  </div>
+                  <div class="mb-3">
+                    <label for="inputDate1" class="form-label">Wprowadź datę wydatku</label>
+                    <input type="date" class="form-control fs-5 pt-3 pb-3 shadow-none" id="inputDateExpense" aria-describedby="emailHelp" required>               
+                  </div>
+                  <div class="mb-3">  
+                     <label for="selectPaymantMethod" class="form-label">Wybierz metodę płatności</label>
+                     <select class="form-select fs-5 pt-3 pb-3" id="selectPaymantMethod" aria-label="Default select example" required>
+                        <option value="1">Gotówka</option>
+                        <option value="2">Karta kredytowa</option>
+                        <option value="3">Karta debetowa</option>
+                      </select>
+                  </div>
+                  <div class="mb-3">  
+                     <label for="expenseCategory" class="form-label">Wybierz kategorie wydatku</label>
+                     <select class="form-select fs-5 pt-3 pb-3" id="expenseCategory" aria-label="Default select example" required>
+                        <option value="food">Jedzenie</option>
+                           <option value="apartment">Mieszkanie</option>
+                           <option value="transportation">Transport</option>
+                           <option value="telecommunication">Telekomunikacja</option>
+                           <option value="healthcare">Opieka zdrowotna</option>
+                           <option value="cloth">Ubranie</option>
+                           <option value="hygiene">Higiena</option>
+                           <option value="kids">Dzieci</option>
+                           <option value="entertainment">Rozrywka</option>
+                           <option value="trip">Wycieczka</option>
+                           <option value="training">Szkolenia</option>
+                           <option value="books">Książki</option>
+                           <option value="savings">Oszczędności</option>
+                           <option value="pension">Na złotą jesień, czyli emeryturę</option>
+                           <option value="debt">Spłata długów</option>
+                           <option value="donation">Darowizna</option>
+                           <option value="another">Inne</option>
+                      </select>
+                  </div>
+                  <button type="submit" id="myButton" class="btn btn-light p-3">Dodaj wydatek</button>
+                  <button type="button" class="btn btn-danger p-3" onclick="clearInputs()">Wyczyść pola</button>
+                </form>
+                <script src="js/script.js"></script>
             </div>
          </div>
       </div>
