--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
    <!-- navbar -->
    <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-xxl p-2 mt-2 mb-5">
-         <a href="#" class="navbar-brand" >
+         <a href="index.html" class="navbar-brand" >
             <img src="img/budget.png" alt="" width="100" height="100" class="d-inline-block align-text-bottom">
             <span class="text-primary display-2">
                twój <span class="text-success">budżet</span>
@@ -36,10 +36,10 @@
                   <a href="#" class="nav-link text-primary mt-2 me-3">Pomoc</a>
                </li>
                <li class="nav-item d-md-none">
-                  <a href="#" class="nav-link active">Zarejestruj się</a>
+                  <a href="index.html" class="nav-link active">Zarejestruj się</a>
                </li>
                <li class="nav-item ms-2 d-none d-md-inline">
-                  <a href="#" class="btn btn-outline-light fw-normal bg-light text-primary pt-3 pb-3 ps-4 pe-4" aria-current="page">Zarejestruj się</a>
+                  <a href="index.html" class="btn btn-outline-light fw-normal bg-light text-primary pt-3 pb-3 ps-4 pe-4" aria-current="page">Zarejestruj się</a>
                </li>
             </ul>
          </div>
